<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recipeStepDetailVideoPlayerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/video_height"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/recipeStepDetailThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/recipeStepDetailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_spacing"
            style="@style/Base.TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/recipeStepDetailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_spacing"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/recipeStepDetailPrevButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/recipe_step_prev"/>

            <Button
                android:id="@+id/recipeStepDetailNextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/recipe_step_next"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>