<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/normal_spacing">

    <TextView
        android:id="@+id/recipeDetailStepSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_steps_section_title"
        style="@style/RecipeSubtitle"
        android:layout_marginBottom="@dimen/normal_spacing" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipeDetailStepList"
        android:overScrollMode="always"
        android:scrollbars="none"
        android:isScrollContainer="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>