<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recipe_step_card_selector">

    <TextView
        android:id="@+id/recipeDetailStepNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_marginRight="@dimen/normal_spacing"
        tools:text="1"/>

    <TextView
        android:id="@+id/recipeDetailStepShortDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:layout_marginRight="@dimen/normal_spacing"
        tools:text="Recipe Short Description"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:src="@drawable/ic_chevron_right_black_24dp" />
</LinearLayout>