...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:srcCompat="@color/colorAccent"/>

        <TextView
            android:id="@+id/recipeDetailName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_spacing"
            tools:text="Recipe Title"
            style="@style/TextAppearance.AppCompat.Headline"/>

...
